# ansible_linux_base

./: .envrc  .gitignore  .tool-versions  .yamllint.yml  CHANGELOG.md  README.md  galaxy.yml  pyproject.toml  requirements.txt  requirements.yml  taskfile.yml
docs/: Development.md
go-tasks/: development.yml
meta/: runtime.yml
requirements/: dev.txt  lints.txt  tests.txt  usage.txt
roles/asdf/defaults/: main.yml
roles/asdf/meta/: argument_specs.yml  main.yml
roles/asdf/tasks/: main.yml
roles/cockpit/: DESTROY.md  README.md
roles/cockpit/defaults/: main.yml
roles/cockpit/meta/: argument_specs.yml  main.yml
roles/cockpit/tasks/: main.yml
roles/cockpit/templates/: cockpit.socket.j2  disallowed-users.j2
roles/firewalld/: README.md
roles/firewalld/defaults/: main.yml
roles/firewalld/handlers/: main.yml
roles/firewalld/meta/: argument_specs.yml  main.yml
roles/firewalld/tasks/: main.yml
roles/google_authenticator/: README.md
roles/google_authenticator/defaults/: main.yml
roles/google_authenticator/meta/: argument_specs.yml  main.yml
roles/google_authenticator/tasks/: main.yml
roles/google_authentificator/defaults/: main.yml
roles/google_authentificator/tasks/: main.yml
roles/hostname/: README.md
roles/hostname/defaults/: main.yml
roles/hostname/handlers/: main.yml
roles/hostname/meta/: argument_specs.yml  main.yml
roles/hostname/tasks/: main.yml
roles/nmcli/: README.md
roles/nmcli/defaults/: main.yml
roles/nmcli/handlers/: main.yml
roles/pre_ansible/: README.md
roles/selinux/: README.md
roles/users/: README.md
(+42 files in other folders)
