[project]
name = "dda104-linux-base"
version = "0.1.0"
description = "dda104-linux-base"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.7.0",
    "ansible-doctor>=7.0.7",
    "ansible-lint>=25.6.0",
    "molecule>=25.6.0",
    "molecule-plugins[podman]>=23.7.0",
    "yamllint>=1.37.1",
]
